--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,7 +27,7 @@
 <body>
 
     <header>
-        <nav>
+        <nav class="site-nav">
             <ul>
                 {{ $currentPage := . }}
                 {{ range .Site.Menus.main }}
