--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,7 +14,9 @@ ul {
   padding: 0;
 }
 
-a {
+a,
+a:visited,
+a:hover {
   color: var(--main-color);
 }
 
@@ -40,31 +42,8 @@ body {
 article {
   margin-bottom: 3rem;
 
-  a {
-    text-decoration: none;
-  }
-
-  small > a {
-    text-decoration: underline;
-  }
-
   p {
     margin-bottom: 0.2rem;
-  }
-}
-
-// social icons and navbar items
-header li,
-nav li {
-  display: inline;
-
-  a {
-    text-decoration: none;
-  }
-
-  a:hover,
-  a:visited {
-    color: var(--main-color);
   }
 }
 
@@ -104,12 +83,16 @@ footer {
   background-color: var(--bkg-color-light);
 }
 
-.social-icons {
+nav.site-nav > li {
+  display: inline-block;
+}
+
+header > ul.social-icons {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 
-  li {
+  > li {
     padding: 15px 10px 0 10px;
   }
 }
