--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -16,12 +16,14 @@
         {{ $article.Content | truncate 380 }}
     {{ end }}
 
-    <a
-        href="{{ $url }}"
-        {{ if isset $article.Params "src_url" }}class="extlink"{{ end }}
-    >
-        {{ partial "date" $article.Date }}
-        {{ if not (isset $section.Params "src_url") }}Read more&#8230;{{end}}
-    </a>
+    <footer>
+        <a
+            href="{{ $url }}"
+            {{ if isset $article.Params "src_url" }}class="extlink"{{ end }}
+        >
+            {{ partial "date" $article.Date }}
+            {{ if not (isset $section.Params "src_url") }}Read more&#8230;{{end}}
+        </a>
+    </footer>
 
 </article>
