--- a/layouts/partials/index_row.html
+++ b/layouts/partials/index_row.html
@@ -22,7 +22,7 @@
 
 {{ range $section_index, $section := $sections }}
 <section
-    class="animated row_{{ $row }} col_{{ add $section_index 1 }}"
+    class="row_{{ $row }} col_{{ add $section_index 1 }}"
 >
 
     <h2 class="large-only">
