--- a/layouts/partials/fontawesome.html
+++ b/layouts/partials/fontawesome.html
@@ -1,6 +1,6 @@
 <a
     href="{{ .URL }}"
-    title="Go to {{ humanize .Name }} account"
+    title="Go to my {{ humanize .Name }} account"
 >
     <i class="fab fa-{{ .Name }} fa-2x"></i>
 </a>
