--- a/layouts/partials/social_icons.html
+++ b/layouts/partials/social_icons.html
@@ -1,9 +1,16 @@
 {{ $socialNetworks := . }}
 <ul class="social-icons">
-{{ range . }}
-    {{ $menu_entry := . }}
-    <li>
-        {{ partial "fontawesome.html" $menu_entry }}
-    </li>
-{{ end }}
+    <div class="social-icons">
+        {{ range . }}
+        {{ $menu_entry := . }}
+        <li>
+            {{ partial "fontawesome.html" $menu_entry }}
+        </li>
+        {{ end }}
+        <li>
+            <a href="/contact" title="Contact me via email">
+                <i class="fas fa-at fa-2x"></i>
+            </a>
+        </li>
+    </div>
 </ul>
