--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,5 +8,5 @@
 {{ range .Pages }}
 {{ partial "article" (dict "article" . "section" $section) }}
 {{ end }}
-
+<!-- FIXME add paginator -->
 {{ end }}
