--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,8 +5,10 @@
 {{ define "main" }}
 {{ $section := . }}
 
-{{ range .Pages }}
+{{ range (.Paginator 5).Pages }}
 {{ partial "article" (dict "article" . "section" $section) }}
 {{ end }}
 <!-- FIXME add paginator -->
+
+{{ template "_internal/pagination.html" . }}
 {{ end }}
