--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -67,12 +67,7 @@ section {
 article {
   border-width: 3px;
   border-style: solid;
-  border-image:
-    linear-gradient(
-      to bottom,
-      var(--main-color),
-      rgba(0, 0, 0, 0)
-    ) 1 100%;
+  border-image: linear-gradient(to bottom, var(--main-color), rgba(0, 0, 0, 0)) 1 100%;
   padding: 0 1rem 0;
   margin-bottom: 2rem;
   line-height: 1.5rem;
