--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -82,10 +82,17 @@ article {
 }
 
 body > header {
-  margin: 5rem 0;
+  margin: 3rem 0;
 
   > div {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 2rem;
     margin: 0 1.2rem;
+
+    h1 {
+      font-weight: 300;
+    }
   }
 }
 
@@ -194,8 +201,8 @@ div.index_content {
     justify-content: center;
 
     div {
-      display: grid;
       grid-template-columns: 2fr 1fr;
+      grid-template-rows: unset;
       max-width: 1000px;
 
       h1 {
