--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "header" }}
 
-    <div>
-        <h1 class="claim">{{ .Site.Param "description" }}</h1>
+    <div class="index-header">
+        {{ .Content }}
 
         {{ partial "social_icons" .Site.Menus.socialnetworks }}
     </div>
