--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -23,8 +23,8 @@
             href="{{ $url }}"
             {{ if isset $article.Params "src_url" }}class="extlink"{{ end }}
         >
-            {{ partial "date" $article.Date }}
-            {{ if not (isset $section.Params "src_url") }}Read more&#8230;{{end}}
+            Posted on {{ partial "date" $article.Date }}
+            {{ if not (isset $section.Params "src_url") }} - Read more&#8230;{{end}}
         </a>
     </footer>
 
