--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,15 @@
     <div class="index-header">
         {{ .Content }}
 
-        {{ partial "social_icons" .Site.Menus.socialnetworks }}
+        <div>
+            {{ partial "social_icons" .Site.Menus.socialnetworks }}
+            <!-- FIXME use handwritten font -->
+            <span class="center">
+                I'm social!
+                <i class="far fa-hand-point-up"></i>
+            </span>
+        </div>
+
     </div>
 
 {{ end }}
