--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -31,16 +31,16 @@
             {{ $currentPage := . }}
             {{ range .Site.Menus.main }}
             <li>
-                {{ $class := "sidebar-nav-item" }}
-                {{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}
-                            {{ $class = "sidebar-nav-item active" }}
+                {{- $class := "sidebar-nav-item" -}}
+                {{- if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) -}}
+                    {{- $class = "sidebar-nav-item active" -}}
                 {{end}}
                 <a
                     class="{{ $class }}"
                     href="{{ .URL }}"
                     title="{{ .Title }}"
                 >
-                    {{ .Name }}
+                    {{- .Name -}}
                 </a>
             </li>
             {{ end }}
