--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,7 +47,7 @@
         </ul>
     </nav>
 
-    <header>{{ block "header" . }}{{ end }}</header>
+    <header class="site">{{ block "header" . }}{{ end }}</header>
 
     <main>{{ block "main" . }}{{ end }}</main>
 
