--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
 {{ define "main" }}
 {{ $section := . }}
 
-<section>
+<section class="list">
 {{- range (.Paginator 5).Pages -}}
     {{ partial "article" (dict "article" . "section" $section) }}
 {{- end -}}
